# Disseratation

./: README.md
code/: 8365528255314733142demonstrated_motion.mat  FEpVrepRobot.asv  FEpVrepRobot.m  computeImitatedMotion.m  demo_2.mat  demo_4.mat  demo_5.mat  franka_kinematic.ttt  main.asv  main.m  sclerp.m
cpp/: CMakeLists.txt  demo5.csv  franka_kinematic.ttt  main.cpp
